# Student_Depression_Data_Analysis

./: .gitignore  README.md  pyproject.toml
data/Utils/: Sumary_table_generator.ipynb  generador_graficos_automaticos.py
data/raw/: Student Depression Dataset sin job satisfaction.csv
notebooks/: 0_Descarga_datos.ipynb  1_Primera_exploración.ipynb  1_Primera_observación.ipynb  2_Analisis_descriptivo.ipynb  2_Analisis_exploratorio.ipynb  3_Tratamiento_de_datos.ipynb  4_Análisis_descriptivo.ipynb
reports/: Report.txt
