[tool.poetry]
name = "proyecto-eda"
version = "0.1.0"
description = ""
authors = ["Nuria322 <nuriarf777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10"
datasciencetree = "^0.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
